5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2499.log
== TEST (2019-05-09 18:35:22) 
-- CODE:
from math import factorial
k=int(input("digite n: "))
e=0
indice=1
while(k!=-1):
	e=e+(1/factorial(indice))
	indice=indice+1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:38:16) 
-- CODE:
from math import factorial
k=int(input("digite n: "))
e=1
indice=1
while(indice<k):
	e=e+(1/factorial(indice))
	indice=indice+1
print(round(e,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:38:22) 
-- CODE:
from math import factorial
k=int(input("digite n: "))
e=1
indice=1
while(indice<k):
	e=e+(1/factorial(indice))
	indice=indice+1
print(round(e,8))
-- EXECUTION TIME:
0.125028
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
